--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,12 +1,25 @@
 Getting Started 
 
 
-Download file installation file at <a href='http://rdfonthego.googlecode.com/files/RDFOnTheGo.apk'>http://rdfonthego.googlecode.com/files/RDFOnTheGo.apk</a>
+= Introduction =
 
-After installation, run application 'RDF on the go', the application will load data file at <a href='http://rdfonthego.googlecode.com/files/data.n3'>http://rdfonthego.googlecode.com/files/data.n3</a>, so it needs internet connection.
+ RDF Onthego is project to build RDF store and query processor on Android phone.
+ For more information: <a href='http://iswc2010.semanticweb.org/pdf/503.pdf'>RDF On the Go</a>
 
-Following is the demo video of the prototype :
+== Setup project: ==
+ * Step 1:<a href='http://developer.android.com/sdk/installing.html'>Create a Android project.</a>
+ RDFOnthego requires Android 2.1 or later version. And don't forget to add WRITE_EXTERNAL_STORAGE permission to your project.
+    
+ * Step 2: Adding rdfonthego external jar file to your Android project
+ 
+  - <a href='http://rdfonthego.googlecode.com/files/je-android-4.1.10.jar'>je-andoird-4.1.10.jar</a>. Berkeley DB JE for Android (Required!)
+ 
+  - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.core.jar'>deri.org.rdfonthgo.core.jar</a> Jena SW toolkit with RDF store built in(Required!)
 
-<wiki:video url="http://www.youtube.com/watch?v=Ae-4ffiWaw0"/>
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.spatial.jar'>deri.org.rdfonthego.spatial.jar</a> (Optional!). The spatial indexing packages.
 
-NOTE: in case If appplication doesn't work, try to create directory /data/local/rdfonthego by using command : adb shell mkdir /data/local/rdfonthego, then try again. 
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.lucene.jar'>deri.org.rdfonthego.lucene.jar</a> (Optional!) The lucene packages.
+
+== <a href ='http://code.google.com/p/rdfonthego/wiki/Tutorial'>Tutorial</a> ==
+
+== <a href ='http://code.google.com/p/rdfonthego/wiki/Example'> Example</a> ==
