--- a/wiki/Tutorial.wiki
+++ b/wiki/Tutorial.wiki
@@ -1,5 +1,18 @@
 #summary This tutorial will explain how to use RDFonthego.
 
+== Setup project: ==
+ * Step 1:<a href='http://developer.android.com/sdk/installing.html'>Create a Android project.</a>
+ RDFOnthego requires Android 2.1 or later version. And don't forget to add WRITE_EXTERNAL_STORAGE permission to your project.
+    
+ * Step 2: Adding rdfonthego external jar file to your Android project
+ 
+  - <a href='http://rdfonthego.googlecode.com/files/je-android-4.1.10.jar'>je-andoird-4.1.10.jar</a>. Berkeley DB JE for Android (Required!)
+ 
+  - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.core.jar'>deri.org.rdfonthgo.core.jar</a> Jena SW toolkit with RDF store built in(Required!)
+
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.spatial.jar'>deri.org.rdfonthego.spatial.jar</a> (Optional!). The spatial indexing packages.
+
+ - <a href='http://rdfonthego.googlecode.com/files/deri.org.rdfonthego.lucene.jar'>deri.org.rdfonthego.lucene.jar</a> (Optional!) The lucene packages.
 == Working with RDFOnthego ==
   
      RDFOnthego based on <a href='http://jena.sourceforge.net/'>Jena Semantic Web</a> framework, so that it works like Jena. If you are not familiar with Jena please take a look at <a href = 'http://jena.sourceforge.net/tutorial/RDF_API/index.html'> Jena Tutorial.</a>
