--- a/papers/Plan/LaTeX1.tex
+++ b/papers/Plan/LaTeX1.tex
@@ -11,17 +11,39 @@
 \maketitle
 \section{Description of work}
 In this work, we aim to implement a wireless network sensor(WNS) for a smart office and we use DERI building as an object to do the experiments. The WNS consists of physical sensor nodes to collect enviromental data, actuator nodes for automatic controlling such as light switching, door locking ... etc.  Each node should able to communicate with thier base station via wireless technologies such as wifi, zigbee..ect. A Central Unit is used as a sensitive data storage, data analyser to predict the status of the room and to  issue command to the actuator nodes. Users are able to communicate with the system via application built and installed on thier mobile devices. In the next sections we discuss about realistic scenario, available technology, system design, and evaluation result.
+
+*** Be careful with grammar and wording
+
 \section{Scenarios}
 \subsection{Looking for parking place}
  When a Derian drives his car to IDA Bussiness Park's gate, the first thing he does is to look for a parking place. When his phone has connected to DERI wifi, a parking map shows with avaiable slot for him.The application is also able to record his usual spot and remind him if it is avaiable.
+
+*** Is it feasible to do this with DERI parking lot?
+
 \subsection{Guide the visitor}
- A visistor is comming intoDERI building, he open his cell phone and connect to the DERI network. A mobile application will atomatically install to his cell phone and asking what he want to do. 
- If the visitor wants to meet some one in DERI, the system will notificate his host to arrange the place for the meeting then guide him to his meeting.\\
+ A visistor is comming(coming) intoDERI building, he open his cell phone and connect to the DERI network. A mobile application will atomatically install to his cell phone and asking what he want to do. 
+ If the visitor wants to meet some one in DERI, the system will notificate(notify) his host to arrange the place for the meeting then guide him to his meeting.\\
  If the visitor is comming to a meeting is hosted by DERI. The system will show him a list of meeting are or going to take place. He is able to pick the meeting then application will guide him to the conference room booked for this meeting.
+ 
+ *** use spell checker
+ 
+ *** is it possible to use computing services in DERI? 
+ 
 \subsection{Notifications}
  System will issue diiferent notifications to remind people about the working enviroment in the room if it might affect thier health or concentration.
+ 
+ ***How to collect data to decide when to notify? it must be complicated process and needs domain expertise
+ 
 \subsection{Discussions}
  More scenarios have to be depicted.
+ 
+ 
+ ***Sensors to more fine-grain contexts, for instance , noice-level $\to$ not in the office, RFID + calendar $\to$ in the meeting room with some one...
+ 
+ *** Visualizations : how to visualize such context data to the office and mobile apps ( be aware of limited screen size of mobile phone and it might be more convenient to use small dash board device like digital watch?
+ 
+*** Deploying and collecting data will cost some effort to know how the devices work, the quality of data, what  you do with them, and how to integrate them to build useful apps. 
+ 
 \section{Equipment}
 \subsection{Sensor nodes}
 \begin{tabular}{|p{2.5cm}|c|p{2cm}|c|c|c|p{2.5cm}|}
@@ -30,11 +52,11 @@ In this work, we aim to implement a wireless network sensor(WNS) for a smart off
 \hline
 {Sunspot} & {ARM 920T} & {802.15.4} & {512K} & {4MB flash} & {Java } & {Squawk Java ME Virtual Machine} \\
 \hline
-{Mica2} & {Atemega 128L} & {Chipcon 868/916 MHz}& {4k} & {128k Flash} & {No?} & {TinyOS, SOS, MantisOS support} \\
+{Mica2} & {Atemega 128L} & {Chipcon 868/916 MHz}& {4k} & {128k Flash} & {***NesC} & {TinyOS, SOS, MantisOS support} \\
 \hline
-{Tmote-Sky, Tmote-invent} & {MSP430} & {250 kbit/s 2.4 GHz IEEE 802.15.4 Chipcon Wireless Transceiver} & {10k} & {48k Flash} & {No?} & {Contiki, TinyOS, SOS, MantisOS Support}\\
+{Tmote-Sky, Tmote-invent} & {MSP430} & {250 kbit/s 2.4 GHz IEEE 802.15.4 Chipcon Wireless Transceiver} & {10k} & {48k Flash} & {***NesC} & {Contiki, TinyOS, SOS, MantisOS Support}\\
 \hline
-{RFID tags} &{}&{}&{}&{}&{}&{}\\
+{RFID tags***ask Iza} &{}&{}&{}&{}&{}&{}\\
 \hline
 \end{tabular}
 
@@ -61,6 +83,9 @@ Some pictures
 Networking will be immplemented in JAVA base on JAVA JNI and PECES\\
 BASE - A Micro brokerbased is required as basic knowledge to implement the work.
 \section{Test Field}
+
+*** put the plan here : what to do? how to do? what to buy if necessary?
+
 \subsection{Testing with data collection}
 \subsection{Testring with system decision}
 \subsection{Testing with notification and command}
