--- a/papers/Plan/LaTeX1.tex
+++ b/papers/Plan/LaTeX1.tex
@@ -7,48 +7,56 @@
 
 \begin{document}
 
-\title{Plan for implenmentation of wireless sensor network in DERI building}
+\title{Plan for implementation of wireless sensor network in DERI building}
 \maketitle
 \section{Description of work}
-In this work, we aim to implement a wireless network sensor(WNS) for a smart office and we use DERI building as an object to do the experiments. The WNS consists of physical sensor nodes to collect enviromental data, actuator nodes for automatic controlling such as light switching, door locking ... etc.  Each node should able to communicate with thier base station via wireless technologies such as wifi, zigbee..ect. A Central Unit is used as a sensitive data storage, data analyser to predict the status of the room and to  issue command to the actuator nodes. Users are able to communicate with the system via application built and installed on thier mobile devices. In the next sections we discuss about realistic scenario, available technology, system design, and evaluation result.
+In this work, we aim to implement a wireless network sensor(WNS) for a smart office and we use DERI building as an object to do the experiments. The WNS consists of physical sensor nodes to collect environmental data, actuator nodes for automatic controlling such as light switching, door locking ... etc.  Each node should able to communicate with their base station via wireless technologies such as wifi, zigbee..ect. A Central Unit is used as a sensitive data storage, data analyser to predict the status of the room and to  issue command to the actuator nodes. Users are able to communicate with the system via application built and installed on their mobile devices. In the next sections we discuss about realistic scenario, available technology, system design, and evaluation result.
 
-*** Be careful with grammar and wording
+%*** Be careful with grammar and wording
 
 \section{Scenarios}
 \subsection{Looking for parking place}
- When a Derian drives his car to IDA Bussiness Park's gate, the first thing he does is to look for a parking place. When his phone has connected to DERI wifi, a parking map shows with avaiable slot for him.The application is also able to record his usual spot and remind him if it is avaiable.
+ When a Derians drives his car to IDA business Park's gate, the first thing he does is to look for a parking place. When his phone has connected to DERI wifi, a parking map shows with available slot for him.The application is also able to record his usual spot and remind him if it is available.
 
-*** Is it feasible to do this with DERI parking lot?
+*** Is it feasible to do this with DERI parking slot?\\
+It could be really fancy if we could have done something like that. I think we could. I will look for the device and report later.\\
 
 \subsection{Guide the visitor}
- A visistor is comming(coming) intoDERI building, he open his cell phone and connect to the DERI network. A mobile application will atomatically install to his cell phone and asking what he want to do. 
- If the visitor wants to meet some one in DERI, the system will notificate(notify) his host to arrange the place for the meeting then guide him to his meeting.\\
- If the visitor is comming to a meeting is hosted by DERI. The system will show him a list of meeting are or going to take place. He is able to pick the meeting then application will guide him to the conference room booked for this meeting.
+A visitor is coming into DERI building, he open his cell phone and connect to the DERI network. A mobile application will automatically install to his cell phone and asking what he want to do.If the visitor wants to meet some one in DERI, the system will notify his host to arrange the place for the meeting then guide him to his meeting.\\
+
+If the visitor is coming to a meeting is hosted by DERI. The system will show him a list of meeting are or going to take place. He is able to pick the meeting then application will guide him to the conference room booked for this meeting.\\
  
- *** use spell checker
- 
- *** is it possible to use computing services in DERI? 
+% is it possible to use computing services in DERI? 
+
+In some airports, when you turn on your phone we could receive a message to notify bla bla bla  with a link to their internet web page.I think we could use the same method to give visitor the link to download and install app to their phone. 
  
 \subsection{Notifications}
- System will issue diiferent notifications to remind people about the working enviroment in the room if it might affect thier health or concentration.
+ System will issue different notifications to remind people about the working environment the room if it might affect their health or concentration.
  
- ***How to collect data to decide when to notify? it must be complicated process and needs domain expertise
+% ***How to collect data to decide when to notify? it must be complicated process and needs domain expertise?
+Yes, it's complicated. But let's touch the difficulty we always have chances to turn left when nothing is right !!!!
  
 \subsection{Discussions}
  More scenarios have to be depicted.
  
  
- ***Sensors to more fine-grain contexts, for instance , noice-level $\to$ not in the office, RFID + calendar $\to$ in the meeting room with some one...
+ ***Sensors to more fine-grain contexts, for instance , noise-level $\to$ not in the office, RFID + calendar $\to$ in the meeting room with some one...\\
+
+I agree....with the actuator node. We can do something more than that....sometime people left with out turn off light especially in the toilet ...we are here turning off the light for saving DERI's money (Barney's voice :D)!!!
  
- *** Visualizations : how to visualize such context data to the office and mobile apps ( be aware of limited screen size of mobile phone and it might be more convenient to use small dash board device like digital watch?
- 
-*** Deploying and collecting data will cost some effort to know how the devices work, the quality of data, what  you do with them, and how to integrate them to build useful apps. 
+ *** Visualizations : how to visualize such context data to the office and mobile apps ( be aware of limited screen size of mobile phone and it might be more convenient to use small dash board device like digital watch?\\
+
+Ha ha ... you really want to get this watch ... i know. Of cause the watches are really needed for the 2nd  scenario. How can the system remind the someone that he has visitor. He could be not in his desk, not with his phone but his watch always at this hand.
+
+
+*** Deploying and collecting data will cost some effort to know how the devices work, the quality of data, what  you do with them, and how to integrate them to build useful apps. \\
+
  
 \section{Equipment}
 \subsection{Sensor nodes}
 \begin{tabular}{|p{2.5cm}|c|p{2cm}|c|c|c|p{2.5cm}|}
 \hline
-\head{Name} & \head{Controller} & \head{Tranceiver} & \head{RAM} & \head{Storage} &\head{Programmable} &\head{Remarks}\\
+\head{Name} & \head{Controller} & \head{Transceiver} & \head{RAM} & \head{Storage} &\head{Programmable} &\head{Remarks}\\
 \hline
 {Sunspot} & {ARM 920T} & {802.15.4} & {512K} & {4MB flash} & {Java } & {Squawk Java ME Virtual Machine} \\
 \hline
@@ -64,29 +72,60 @@ In this work, we aim to implement a wireless network sensor(WNS) for a smart off
 
 \begin{tabular}{|p{2.5cm}|c|p{2cm}|c|c|c|}
 \hline
-\head{Name} & \head{Controller} & \head{Tranceiver} & \head{RAM} & \head{Storage} &\head{Interface}\\
+\head{Name} & \head{Controller} & \head{Transceiver} & \head{RAM} & \head{Storage} &\head{Interface}\\
 \hline
 {} &{}&{}&{}&{}&{}\\
 \hline
 \end{tabular}
 
-\section{Setup}
+\section{Set up}
 \subsection{Sensor node distribution}
 %Senosr nodes : Report current status ...\\
 %Actuator nodes: control nodes () \\
 %Central control unit: Coordinates different subsystems (actuator/sensors)\\
 Sensor nodes are placed around the room to collect the data. The distribution of the sensor nodes depend on the scheme of the room. \\
-In one room will place 1-2 base station which are directly connected to the Central Control Unit (Coordinate). This coordinate takes the reponsibility to communicate to moblie divice to answer the data query or listen to the request then issue the notifications for users or commands to the actuator nodes.
+In one room will place 1-2 base station which are directly connected to the Central Control Unit (Coordinate). This coordinate takes the responsibility to communicate to mobile device to answer the data query or listen to the request then issue the notifications for users or commands to the actuator nodes.
 \subsection{System Design}
 Some pictures
 \section{Background Knowledge}
-Networking will be immplemented in JAVA base on JAVA JNI and PECES\\
-BASE - A Micro brokerbased is required as basic knowledge to implement the work.
+Networking will be implemented in JAVA base on JAVA JNI and PECES\\
+BASE - A Micro broker-based is required as basic knowledge to implement the work.
+\section{Implementation plan}
+
+%Hardware Capabilities :- Energy, Radios, Processor, Sensors.
+%data aggregation, ad-hoc routing, distributed signal processing in the context of wireless sensor networks.
+\subsection{Investigation, analyse, selection}
+- Set up single sensor nodes, and testing their capabilities such as types of physical sensitive data, data transfer, range radio wave, etc;\\
+- Analysing the testing result to plan some variants for designing the system such as  what type of sensor can be used, how many nodes we need, what tools are available to implement, etc;\\
+- Discuss to select: routing protocols, language programming, storing technique could be used.\\
+- Predict the issues probably occur in the reality.
+\subsection{Physical architecture for WSN}
+- Place the sensor nodes and test for the connectivity ability\\
+- Design the physical scheme for the whole network where to put base station, sensor nodes, gate way etc.\\
+- Test the data collecting\\
+- Optimization the physical sensor network.
+\subsection{Software Architecture for WSN}
+- Plan for the networking such as routing protocols, node addressing, etc \\
+- Built a framework supports for the collecting data from different types of sensor nodes.\\
+- Testing the networking.
+- Plan for data storing technologies : RDF scheme, RDF indexing (Are we going to use RDF data for data processing later???)\\ 
+- Depend on scenario rebuilding to decide what will we do with the data we got.\\
+put the plan here : what to do? how to do? what to buy if necessary?
 \section{Test Field}
-
-*** put the plan here : what to do? how to do? what to buy if necessary?
-
 \subsection{Testing with data collection}
-\subsection{Testring with system decision}
+\subsection{Testing with system decision}
 \subsection{Testing with notification and command}
 \end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
