--- a/papers/Plan/LaTeX1.tex
+++ b/papers/Plan/LaTeX1.tex
@@ -91,14 +91,26 @@ Some pictures
 Networking will be implemented in JAVA base on JAVA JNI and PECES\\
 BASE - A Micro broker-based is required as basic knowledge to implement the work.
 \section{Implementation plan}
-
 %Hardware Capabilities :- Energy, Radios, Processor, Sensors.
 %data aggregation, ad-hoc routing, distributed signal processing in the context of wireless sensor networks.
-\subsection{Investigation, analyse, selection}
-- Set up single sensor nodes, and testing their capabilities such as types of physical sensitive data, data transfer, range radio wave, etc;\\
+\subsection{Month 1 : Investigation, analyse, selection}
+\subsubsection{Week 1}
+Understanding about the overall of Wireless Sensor Network.\\
+Understanding about devices.\\
+Define capabilities of devices which have to be tested and analysed.
+\subsubsection{Week 2}
+Set up devices separately collect information about their capabilities.\\
+* Pay Attention on environment programming data transfer rate.
+\subsubsection{Week 3}
 - Analysing the testing result to plan some variants for designing the system such as  what type of sensor can be used, how many nodes we need, what tools are available to implement, etc;\\
 - Discuss to select: routing protocols, language programming, storing technique could be used.\\
 - Predict the issues probably occur in the reality.
+\subsubsection{Week 4}
+- Design physical 
+
+
+
+
 \subsection{Physical architecture for WSN}
 - Place the sensor nodes and test for the connectivity ability\\
 - Design the physical scheme for the whole network where to put base station, sensor nodes, gate way etc.\\
